# Raytracer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  Readme.md  base.cfg  exemple.cfg  obj_exemple.cfg  render_all.sh  torus_tanglecube.cfg  transforms_demo.cfg  walls.cfg
.github/: BUG_REPORT.yml  pull_request_template.md
ISSUE_TEMPLATE/: BUG_REPORT.yml  NEW_FEATURE.yml
docs/: Config_File_Format.md  Core.md  Plugin.md
libs/: CMakeLists.txt
libs/lights/directional/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.hpp  DirectionalLightPlugin.cpp
libs/lights/point/: CMakeLists.txt  PointLight.cpp  PointLight.hpp  PointLightPlugin.cpp
libs/lights/spot/: CMakeLists.txt  SpotLight.cpp  SpotLight.hpp  SpotLightPlugin.cpp
libs/materials/: CMakeLists.txt  ColorHelpers.hpp
libs/materials/caustics/: CMakeLists.txt  Caustics.cpp  Caustics.hpp  CausticsPlugin.cpp
libs/materials/chessboard/: CMakeLists.txt  Chessboard.cpp  Chessboard.hpp  ChessboardPlugin.cpp
libs/materials/crackeddirt/: CMakeLists.txt  CrackedDirt.cpp  CrackedDirt.hpp  CrackedDirtPlugin.cpp
libs/materials/flatcolor/: CMakeLists.txt  FlatColor.cpp  FlatColor.hpp  FlatColorPlugin.cpp
libs/materials/magma/: CMakeLists.txt  Magma.cpp  Magma.hpp  MagmaPlugin.cpp
libs/materials/marble/: CMakeLists.txt  Marble.cpp  Marble.hpp  MarblePlugin.cpp
libs/materials/normalmap/: CMakeLists.txt  NormalMap.cpp  NormalMap.hpp  NormalMapPlugin.cpp
libs/materials/perlinnoise/: CMakeLists.txt  PerlinNoise.cpp  PerlinNoise.hpp  PerlinNoisePlugin.cpp
libs/materials/rust/: CMakeLists.txt  Rust.cpp  Rust.hpp  RustPlugin.cpp
libs/materials/textured/: CMakeLists.txt  MeshMaterial.hpp  MtlLoader.cpp  MtlLoader.hpp  TexturedMaterial.cpp  TexturedMaterial.hpp  TexturedMaterialPlugin.cpp
libs/materials/texturedmat/: CMakeLists.txt  MeshMaterial.hpp  MltLoader.cpp  MltLoader.hpp  MtlLoader.cpp  MtlLoader.hpp  TexturedMaterial.cpp  TexturedMaterial.hpp  TexturedMaterialPlugin.cpp
libs/materials/turingpattern/: CMakeLists.txt  TuringPattern.cpp  TuringPattern.hpp  TuringPatternPlugin.cpp
libs/materials/wood/: CMakeLists.txt  Wood.cpp  Wood.hpp  WoodPlugin.cpp
libs/materials/worleynoise/: CMakeLists.txt  WorleyNoise.cpp  WorleyNoise.hpp  WorleyNoisePlugin.cpp
libs/primitive/cone/: CMakeLists.txt  Cone.cpp  Cone.hpp  ConePlugin.cpp  LimitedCone.cpp  LimitedCone.hpp
libs/primitive/cylinder/: CMakeLists.txt  Cylinder.cpp  Cylinder.hpp  CylinderPlugin.cpp  LimitedCylinder.cpp  LimitedCylinder.hpp
libs/primitive/fractal/: CMakeLists.txt  Fractal3D.cpp  Fractal3D.hpp  FractalBuilder.cpp  FractalBuilder.hpp  FractalPlugin.cpp  IFractalStrategy.hpp  MandelbulbStrategy.cpp
libs/primitive/fractal/strategy/: Kochsnowflake3DStrategy.cpp  Kochsnowflake3DStrategy.hpp  MandelbulbStrategy.cpp  MandelbulbStrategy.hpp  MengerspongeStrategy.cpp  MengerspongeStrategy.hpp
libs/primitive/mesh/: CMakeLists.txt  Face.cpp  Face.hpp  Mesh.cpp  Mesh.hpp  MeshGeometryGroup.hpp  MeshMaterial.hpp  MeshPlugin.cpp  MeshSurfaceHelper.cpp  MeshSurfaceHelper.hpp  MltLoader.cpp  MltLoader.hpp  ObjLoader.cpp  ObjLoader.hpp
libs/primitive/rectangle/: CMakeLists.txt  Rectangle.cpp  Rectangle.hpp  RectanglePlugin.cpp
libs/primitive/sphere/: CMakeLists.txt  Sphere.cpp  Sphere.hpp  SpherePlugin.cpp
libs/primitive/tanglecube/: CMakeLists.txt  TangleCube.cpp  TangleCube.hpp  TangleCubePlugin.cpp
libs/primitive/torus/: CMakeLists.txt  Torus.cpp  Torus.hpp  TorusPlugin.cpp
libs/primitive/triangle/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  TrianglePlugin.cpp
libs/scene/: CMakeLists.txt  Scene.cpp  Scene.hpp  ScenePlugin.cpp
libs/transformations/rotation/: CMakeLists.txt  Rotation.cpp  Rotation.hpp  RotationPlugin.cpp
libs/transformations/scale/: CMakeLists.txt  Scale.cpp  Scale.hpp  ScalePlugin.cpp
libs/transformations/shear/: CMakeLists.txt  Shear.cpp  Shear.hpp  ShearPlugin.cpp
scenes/: 01_diffuse_room.cfg  02_specular_room.cfg  02_specular_room_color.cfg  02_specular_room_roughness.cfg  03_refractive_room.cfg  04_material_parameter_gallery.cfg  05_multi_light_room.cfg  06_textured_octane_room.cfg  20_pt_spec_mirror_norefractive.cfg  21_pt_spec_reflectivity_nocolor.cfg  22_pt_spec_reflectivity_color.cfg  23_pt_spec_roughness_nocolor.cfg  24_pt_spec_roughness_color.cfg  30_pt_refr_transparency_nocolor.cfg  31_pt_refr_transparency_color.cfg  32_pt_refr_ior_nocolor.cfg  33_pt_refr_ior_color.cfg  34_pt_refr_roughness_color.cfg  40_light_point.cfg  41_light_ambient.cfg  41_light_ambient_colored.cfg  42_light_ambient_diffuse.cfg  43_light_spot.cfg  50_diffuse_off.cfg  51_diffuse_on.cfg  52_ao_off.cfg  53_ao_on.cfg  60_ao_demo_off.cfg  61_ao_demo_on.cfg  70_normal_map.cfg  72_materials_perlin_group.cfg  (+6 more)
tests/: CMakeLists.txt
tests/config_files/: cone_and_cylinder.cfg  valid.cfg
tests/configs/: cone_and_cylinder.cfg  valid.cfg
tests/libs/: CMakeLists.txt
tests/libs/invalid_plugin/: CMakeLists.txt
tests/libs/invalid_plugins/: CMakeLists.txt
tests/libs/invalid_plugins/invalid_data/: CMakeLists.txt  TestPlugin.cpp
tests/libs/invalid_plugins/missing_entry/: CMakeLists.txt  TestPlugin.cpp
tests/libs/invalid_plugins/missing_name/: CMakeLists.txt  TestPlugin.cpp
tests/libs/valid_plugin/: CMakeLists.txt  TestPlugin.cpp  ValidObject.hpp
tests/src/: main.cpp
tests/src/bvh/: bvh_test_helpers.hpp  test_aabounding_box.cpp  test_bvh_builder.cpp  test_bvh_node.cpp  test_bvh_strategies.cpp  test_strategy_factory.cpp
tests/src/core/: test_arguments.cpp  test_plugin.cpp
tests/src/exception/: exception.cpp
tests/src/materials/: test_chessboard.cpp  test_crackeddirt.cpp  test_flatcolor.cpp  test_marble.cpp  test_perlinnoise.cpp  test_texturedmaterial.cpp  test_turingpattern.cpp  test_wood.cpp  test_worleynoise.cpp
tests/src/math/: test_matrix4.cpp
tests/src/primitives/: test_cone.cpp  test_cylinder.cpp  test_plane.cpp  test_rectangle.cpp  test_sphere.cpp  test_tanglecube.cpp  test_torus.cpp  test_triangle.cpp
tests/src/transformations/: test_rectangle_transforms.cpp  test_transform.cpp
(+181 files in other folders)
