cmake_minimum_required(VERSION 3.10)
SET (CMAKE_CXX_STANDARD 20)

project(libs)

add_subdirectory(flatcolor)
add_subdirectory(chessboard)
add_subdirectory(perlinnoise)
add_subdirectory(marble)
add_subdirectory(wood)
add_subdirectory(magma)
add_subdirectory(rust)
add_subdirectory(worleynoise)
add_subdirectory(crackeddirt)
add_subdirectory(turingpattern)
add_subdirectory(normalmap)
add_subdirectory(textured)